--- a/src/ui/todo_tracker.css
+++ b/src/ui/todo_tracker.css
@@ -24,6 +24,13 @@
     }
 }
 */
+.alternate_row:nth-child(even){
+  background-color: #f4f4f4;
+}
+.alternate_row:nth-child(odd){
+  background-color: #ffffff;
+}
+
 table tr:nth-child(odd)	{
   background-color: #f1f1f1;
 }
@@ -35,6 +42,21 @@ table tr:nth-child(even) {
   color:#4787ed;
 }
 
-.header-bg-color {
-  background-color:#bcf
+.header-bar {
+  background-color:#bcf;
+  /* margin-bottom: 8px; */
+}
+
+.header-bar-lighter {
+  background-color:#e3e9ff;
+  margin-top: 18px;
+  margin-bottom: 12px;
+}
+
+.header-bar-text {
+  color:#888;
+}
+
+a:link {
+  color:black;
 }
