--- a/src/ui/todo_tracker.css
+++ b/src/ui/todo_tracker.css
@@ -1,29 +1,3 @@
-/*
-.row div:nth-child(even){
-  background-color: #dcdcdc;
-}
-.row div:nth-child(odd){
-  background-color: #aaaaaa;
-}
-
-@media (min-width: 768px) {
-    .row div:nth-child(4n), .row div:nth-child(4n-1) {
-        background: #dcdcdc;
-    }
-    .row div:nth-child(4n-2), .row div:nth-child(4n-3) {
-        background: #aaaaaa;
-    }
-}
-
-@media (min-width: 992px) {
-    .row div:nth-child(6n), .row div:nth-child(6n-1), .row div:nth-child(6n-2) {
-        background: #dcdcdc;
-    }
-    .row div:nth-child(6n-3), .row div:nth-child(6n-4), .row div:nth-child(6n-5) {
-        background: #aaaaaa;
-    }
-}
-*/
 .alternate_row:nth-child(even){
   background-color: #f4f4f4;
 }
@@ -55,6 +29,12 @@ table tr:nth-child(even) {
 
 .header-bar-text {
   color:#888;
+}
+
+pre.nobg-noborder {
+  border: 0px;
+  background-color: inherit;
+  padding: inherit;
 }
 
 a:link {
